--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,23 +1,41 @@
 <!DOCTYPE html>
+{% extends "base.html" %}
+
+{% block content %}
+	
+
 <html>
 <head>
-	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" rel="stylesheet">
-	<title>Home</title>
-</head>
-<body>
+
+	</head>
+
+
+
+  
 	<div class="container-fluid">
-		<h1>Home</h1>
+		<h1>Tech Blog</h1>
+		{% for p in post  %}
 <div class="row">
-				<div  class=" col-2">
-					<h3>{{post.title}}</h3>
-		
-	</div>
 	
+				<div  class=" col-3">
+					
+						
+					
+				<h3>{{p.title}}</h3>
+				
+				<p>{{p.text| linebreaksbr}}</p>
+				<p align="right">{{p.created_date}}</p>
+
+
+	
+	</div>
+		
 </div>
+{% endfor %}
 	</div>
 
 </body>
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"> </script>
-   <script src ="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" type="text/javascript"></script>
-   <script src ="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.bundle.min.js" type="text/javascript"></script>
-</html>
+
+</html>  
+{% endblock content %}
+
