--- a/templates/base.html
+++ b/templates/base.html
@@ -9,12 +9,12 @@
     
     <body>
   <header>
-      <nav  class="navbar navbar-expand-lg navbar-dark bg-dark  navbar-fixed-top">
+      <nav  class="navbar navbar-expand-lg navbar-light bg-light  navbar-fixed-top">
 
         <div class="container-fluid">
-  <a class="navbar-brand" href="#">
- <img src="" class="d-inline-block align-top" width="30" height="30" alt="">
-  My Blog</a>
+  <a class="navbar-brand" href="{% url "index" %}">
+ <img src="{% static "images/t.png" %}" class="d-inline-block align-top" width="30" height="30" alt="">
+  Django Blog</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -34,18 +34,18 @@
         </li>
        
          <li class="nav-item  ">
-          <a class="nav-link" href="#">Logout</a>
+          <a class="nav-link" href="{% url "logout_" %}">Logout</a>
         </li>
               
 
       {% else %}
       <li class="nav-item  ">
         
-          <a class="nav-link" href="#">Login</a>
+          <a class="nav-link" href="{% url "login" %}">Login</a>
 
         </li>
          <li class="nav-item  ">
-          <a class="nav-link"  href="#"> SignUp</a>
+          <a class="nav-link"  href="{% url "signup" %}"> SignUp</a>
         </li>
         {% endif %}
           </div>
