--- a/templates/blog/details.html
+++ b/templates/blog/details.html
@@ -1,5 +1,7 @@
 <!doctype html>
 {% extends "base.html" %}
+{% load staticfiles %}
+
 
 {% block content %}
 	
@@ -8,10 +10,18 @@
 <div class="container-fluid">
 	<h2 >{{post.title}}</h2>
 	<p>{{post.text | linebreaksbr}}</p>
+	{% if user.is_superuser %}
+	    
+		
+	<a  href="{% url "edit" pk=post.pk%}"><img align="right" src="{% static "images/edit.png" %}" id="pluns" alt="AddPost" width="40px" height="40px"  ></a>
+	{% else %}
+       <a  href="{% url "edit" pk=post.pk%}"><img align="right" src="{% static "images/edit.png" %}" id="pluns" alt="AddPost" width="40px" height="40px"  ></a>
+
+	{% endif %}
    <p align="right">Published on : {{post.pub_date}}</p>
 
 	
 </div>
 	
-{% endblock content %}
+{% endblock  %}
 
