--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -12,21 +12,24 @@
 
 <div class="bg">
 	&nbsp;	
-<h1 class="id1">Django Blog</h1>
+
+<h1 class="id1" align="center"> 	<a class="navbar-brand" href="{% url "index" %}">
+ <img src="{% static "images/t.png" %}" class="d-inline-block align-center" width="80" height="80" alt="">
+  </a>Django Blog</h1>
 
 &nbsp;	
 </div>
 
   
 	<div class="container-fluid">
-		
+			
 		&nbsp;	
 		<div class="row">
 		<div class="col-md-2">
 			<h2>Latest Post</h2>
 </div>	
-			<a  href="{% url "create" %}"><img src="{% static "images/plus.png" %}" id="pluns" alt="AddPost" width="40px" height="40px"  ></a>
-		
+			<a  href="{% url "create" %}"><img src="{% static "images/plus.png" %}" id="pluns" alt="AddPost" width="40px" height="40px"  ></a>&#9;
+
 		
 &nbsp;	
 </div>
@@ -37,10 +40,13 @@
 					<div class="jumbotron">	
 				<a class="alert-success" href="{% url "details" p.id %}">
 				<h3>{{p.title}}</h3></a>
-			
-				<a class="alert-success" href="{% url "details" p.id %}"><p>{{p.body| linebreaksbr}}</p></a>
+			    
+		
+				<a class="alert-success" href="{% url "details" p.id %}">
+					<p>{{p.body| linebreaksbr}}</p></a>
 				<a href="{% url "details" p.id%}" class="text-muted">Read More</a>
 				<p align="right">Published on : {{p.pub_date}}</p>
+			<p>Posted by {{p.author}}</p>
 			</div>
 	
 	</div>
