--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -35,8 +35,8 @@
 </div>
 		{% for p in post  %}
 <div class="row">
-	
-				<div  class=" col-10">
+	        
+				<div  class=" col-12 col-sm-12">
 					<div class="jumbotron">	
 				<a class="alert-success" href="{% url "details" p.id %}">
 				<h3>{{p.title}}</h3></a>
