--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,8 @@
 <link href="https://fonts.googleapis.com/css?family=Mali" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="{% static "css/main.css" %}">
 <link rel="icon" href="{% static "images/t.png" %}" type="image/gif" sizes="16x16">
+<meta name="viewport" content="width=device-width,initial-scale=1.0">
+
 
     
     <body>
