--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -40,7 +40,7 @@
   		<input type="password" name="p1" class="form-control">
   		<label for="p2">Confirm Password</label><br>
   		<input type="password" name="p2" class="form-control"><br>
-
+	<div class="g-recaptcha" data-sitekey="6LcdVXgUAAAAABHGj06aXTlOkHqTzH4C6M7NEPWm"></div><br>
   		<input type="submit" class="bt btn-success btn-lg" name="btn">
 
   
@@ -50,6 +50,6 @@
 
 </div>	
 	
-
+<script src='https://www.google.com/recaptcha/api.js'></script>
 	
 {% endblock content %}
